cascade delete song
